fix gap in svg

--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -59,7 +59,7 @@
 
     rect {
       fill: $orange;
-      width: 220px;
+      width: 221px;
       height: 8px;
       y: 12px;
     }
@@ -88,7 +88,7 @@
       width: 139px + 32px;
 
       rect {
-        width: 139px;
+        width: 140px;
       }
 
       circle {
@@ -112,7 +112,7 @@
       height: 24px;
 
       rect {
-        width: 163px;
+        width: 164px;
         height: 6px;
         y: 9px;
       }
@@ -141,7 +141,7 @@
       height: 18px;
 
       rect {
-        width: 58px;
+        width: 59px;
         height: 5px;
         y: 6.5px;
       }
